# goodboy

./: CMakeLists.txt  LICENSE  README.md  configure.sh
.github/workflows/: cmake.yml
src/emulator/: cpu.cpp  cpu.hpp  memory_controller.cpp  memory_controller.hpp  memory_interface.hpp  random_access_memory.hpp  register.hpp  stub_memory.hpp  types.hpp
src/executable/: main.cpp
src/tests/: memory_controller.cpp  register.cpp
